--- a/.github/workflows/SmallAmpCI.yml
+++ b/.github/workflows/SmallAmpCI.yml
@@ -34,5 +34,7 @@ jobs:
       - uses: mabdi/smallamp-action@main
       - run: ls /home/runner/.smalltalkCI/_builds
         shell: bash
+      - run: ls ${{ env.SMALLAMP_CI_HOME }}
+        shell: bash
       - run: smallAmpCI
         shell: bash  
