--- a/.github/workflows/SmallAmpCI.yml
+++ b/.github/workflows/SmallAmpCI.yml
@@ -16,13 +16,14 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  TestAmplification:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    strategy:
+      matrix:
+        portion: [1,2]
+    name: SmallAmp Number ${{ matrix.portion }}
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - uses: hpi-swa/setup-smalltalkCI@v1
         id: smalltalkci
@@ -32,9 +33,9 @@ jobs:
         shell: bash
         timeout-minutes: 15
       - uses: mabdi/smallamp-action@main
-      - run: ls /home/runner/.smalltalkCI/_builds
+      - run: smallAmpCI 
         shell: bash
-      - run: ls ${{ env.SMALLAMP_CI_HOME }}
-        shell: bash
-      - run: smallAmpCI
-        shell: bash  
+        env:
+          # you can also use: ${{ matrix.portion }}
+          SMALLAMP_PORTION: ${{ strategy.job-index }} 
+          SMALLAMP_ALLJOBS: ${{ strategy.job-total }}
