--- a/.github/workflows/SmallAmpCI.yml
+++ b/.github/workflows/SmallAmpCI.yml
@@ -25,6 +25,8 @@ jobs:
     name: Job number ${{ strategy.job-index }}
     steps:
       - uses: actions/checkout@v2
+      - run: git checkout -b SmallAmp-${{env.GITHUB_RUN_NUMBER}}
+        shell: bash
       - uses: hpi-swa/setup-smalltalkCI@v1
         id: smalltalkci
         with:
