--- a/.github/workflows/SmallAmpCI.yml
+++ b/.github/workflows/SmallAmpCI.yml
@@ -25,7 +25,7 @@ jobs:
     name: Job number ${{ strategy.job-index }}
     steps:
       - uses: actions/checkout@v2
-      - run: git checkout -b SmallAmp-${{env.GITHUB_RUN_NUMBER}}
+      - run: git checkout -b "$(printf 'SmallAmp-%s' ${{env.GITHUB_RUN_NUMBER}} )"
         shell: bash
       - uses: hpi-swa/setup-smalltalkCI@v1
         id: smalltalkci
