--- a/.github/workflows/SmallAmpPush.yaml
+++ b/.github/workflows/SmallAmpPush.yaml
@@ -37,7 +37,7 @@ jobs:
           workflow_conclusion: success
           run_number: 54
           path: ${{ env.SMALLTALK_CI_BUILD_BASE }}
-      - run: pwd; cd smallAmp-results*; ls -al; find . -name "*.zip" -exec unzip {} \;; ls -al
+      - run: pwd; cd smallAmp-results*; ls -al; find . -name "*.zip" -exec unzip {} \;; ls -al; mv *.st ..
         shell: bash 
         working-directory: ${{ env.SMALLTALK_CI_BUILD_BASE }}
       - run: curl https://raw.githubusercontent.com/mabdi/small-amp/master/scripts/installer.st -o installer.st
