--- a/.github/workflows/SmallAmpPush.yaml
+++ b/.github/workflows/SmallAmpPush.yaml
@@ -7,7 +7,6 @@ env:
   reponame: ${{github.event.repository.name}}
   #run_number: ${{ github.event.workflow_run.run_number }}
   run_number: 54
-  branch_name: "SmallAmp-${{env.run_number}}"
 
 on:
   workflow_dispatch:
@@ -21,7 +20,7 @@ jobs:
     #if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - uses: actions/checkout@v2
-      - run: git checkout -b ${{ env.branch_name }}
+      - run: git checkout -b "SmallAmp-${{env.run_number}}"
         shell: bash
       - uses: hpi-swa/setup-smalltalkCI@v1
         id: smalltalkci
