--- a/.github/workflows/SmallAmpPush.yaml
+++ b/.github/workflows/SmallAmpPush.yaml
@@ -20,8 +20,8 @@ jobs:
     #if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - uses: actions/checkout@v2
-      - run: git checkout -b "SmallAmp-${{env.run_number}}"
-        shell: bash
+#      - run: git checkout -b "SmallAmp-${{env.run_number}}"
+#        shell: bash
       - uses: hpi-swa/setup-smalltalkCI@v1
         id: smalltalkci
         with:
