--- a/.github/workflows/SmallAmpPush.yaml
+++ b/.github/workflows/SmallAmpPush.yaml
@@ -22,8 +22,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
            fetch-depth: 0
-#      - run: git checkout -b "SmallAmp-${{env.run_number}}"
-#        shell: bash
+      - run: git checkout -b "SmallAmp-${{env.run_number}}"
+        shell: bash
       - uses: hpi-swa/setup-smalltalkCI@v1
         id: smalltalkci
         with:
@@ -63,4 +63,6 @@ jobs:
         shell: bash
       - run: |
           git config user.name mabdi
+          git add '*.st'
+          git commit -m '[SmallAmp- amplified tests added]'
           git push -u origin HEAD
