--- a/.github/workflows/SmallAmpPush.yaml
+++ b/.github/workflows/SmallAmpPush.yaml
@@ -64,5 +64,16 @@ jobs:
       - run: |
           git config user.name mabdi
           git add '*.st'
-          git commit -m '[SmallAmp- amplified tests added]'
+          git commit -m '[SmallAmp] amplified tests added'
           git push -u origin HEAD
+      - uses: actions/github-script@v4
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            github.pulls.create({
+                "mabdi",
+                '${{ env.reponame }}',
+                "[SmallAmp] amplified tests for action number ${{env.run_number}}",
+                "SmallAmp-${{env.run_number}}",
+                "${{github.event.workflow_run.head_branch}}",
+            });
