--- a/.github/workflows/SmallAmpPush.yaml
+++ b/.github/workflows/SmallAmpPush.yaml
@@ -5,10 +5,10 @@ name: SmallAmpPush
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   reponame: ${{github.event.repository.name}}
-  #run_number: ${{ github.event.workflow_run.run_number }}
-  run_number: 54
-  #head_branch: ${{github.event.workflow_run.head_branch}}
-  head_branch: master
+  run_number: ${{ github.event.workflow_run.run_number }}
+  #run_number: 54
+  head_branch: ${{github.event.workflow_run.head_branch}}
+  #head_branch: master
 
 on:
   workflow_dispatch:
