--- a/.github/workflows/SmallAmpCI.yml
+++ b/.github/workflows/SmallAmpCI.yml
@@ -1,27 +1,17 @@
-# This is a basic workflow to help you get started with Actions
-
 name: SmallAmpCI
-
-
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   reponame: ${{github.event.repository.name}}
 
-
-# Controls when the action will run. 
 on:
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   TestAmplification:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        portion: [1,2]
+        portion: [1,2] # the content of array is not important, just the length
     name: Job number ${{ strategy.job-index }}
     steps:
       - uses: actions/checkout@v2
@@ -33,29 +23,9 @@ jobs:
         shell: bash
         timeout-minutes: 15
       - uses: mabdi/smallamp-action@main
-      - run: git checkout -b ${{ env.SMALLAMP_BRANCH_NAME }}
-        shell: bash
       - run: smallAmpCI 
         shell: bash
         env:
           # you can also use: ${{ matrix.portion }}
           SMALLAMP_PORTION: ${{ strategy.job-index }} 
           SMALLAMP_ALLJOBS: ${{ strategy.job-total }}
-      - run: pwd
-        shell: bash
-      - run: ls ${{ env.SMALLTALK_CI_BUILD }} -al
-        shell: bash
-      - run: git status
-        shell: bash  
-        working-directory: ${{ env.SMALLTALK_CI_BUILD }}/pharo-local/iceberg/mabdi/smalltalk-SmallBank
-      - run: ls -al
-        shell: bash
-      - run: git branch 
-        shell: bash
-      - run: git status
-        shell: bash
-      - run: env
-        shell: bash
-      - run: |
-          git config user.name mabdi
-          git push -u origin HEAD
