--- a/.github/workflows/SmallAmpPush.yaml
+++ b/.github/workflows/SmallAmpPush.yaml
@@ -1,5 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-
 name: SmallAmpPush
 
 env:
@@ -11,7 +9,7 @@ env:
   #head_branch: master
 
 on:
-  workflow_dispatch:
+  #workflow_dispatch:
   workflow_run:
     workflows: ["SmallAmpCI"]
     types: [completed]
@@ -36,32 +34,22 @@ jobs:
       - name: Download artifacts
         uses: dawidd6/action-download-artifact@v2
         with:
-          # Optional, GitHub token
-          #github_token: ${{secrets.GITHUB_TOKEN}}
-          # Required, workflow file name or ID
           workflow: SmallAmpCI.yml
           workflow_conclusion: success
           run_number: ${{ env.run_number }}
           path: ${{ env.SMALLTALK_CI_BUILD_BASE }}
-      - run: pwd; cd smallAmp-results*; ls -al; find . -name "*.zip" -exec unzip {} \;; ls -al; mv *.st ..
+      - run: cd smallAmp-results*; find . -name "*.zip" -exec unzip {} \;; mv *.st ..
         shell: bash 
         working-directory: ${{ env.SMALLTALK_CI_BUILD_BASE }}
       - run: curl https://raw.githubusercontent.com/mabdi/small-amp/master/scripts/installer.st -o installer.st
         shell: bash 
         working-directory: ${{ env.SMALLTALK_CI_BUILD_BASE }}
-        env:
-          RUN_NUMBER: github.event.workflow_run.conclusion 
-      - run: pwd; ls -al; ${{ env.SMALLTALK_CI_VM }} TravisCI.image st --save --quit installer.st
+      - run: ${{ env.SMALLTALK_CI_VM }} TravisCI.image st --save --quit installer.st
         shell: bash
         working-directory: ${{ env.SMALLTALK_CI_BUILD_BASE }}
       - run: git status
         shell: bash  
-        #  working-directory: ${{ env.SMALLTALK_CI_BUILD }}/pharo-local/iceberg/mabdi/smalltalk-SmallBank
       - run: git branch 
-        shell: bash
-      - run: git status
-        shell: bash
-      - run: env
         shell: bash
       - run: |
           git config user.name mabdi
@@ -77,5 +65,6 @@ jobs:
                 repo: '${{ env.reponame }}',
                 title: "[SmallAmp] amplified tests for action number ${{env.run_number}}",
                 head: "SmallAmp-${{env.run_number}}",
-                base: "${{env.head_branch}}"
+                base: "${{env.head_branch}}",
+                body: "I submit this pull request to suggest new tests based on the output of SmallAmp tool."
             });
