--- a/.github/workflows/SmallAmpCI.yml
+++ b/.github/workflows/SmallAmpCI.yml
@@ -45,6 +45,17 @@ jobs:
       - run: smalltalkci -s ${{ steps.smalltalkci.outputs.smalltalk-version }}
         shell: bash
         timeout-minutes: 15
+      - uses: mabdi/smallamp-action@main
+      - run: python3 runner.py -r amp -d ${{ env.SMALLTALK_CI_BUILD_BASE }} -p ${{ env.reponame }} > overview-amp.txt
+        shell: bash
+        working-directory: SMALLAMP_CI_HOME
+      - run: python3 runner.py -r sum -d ${{ env.SMALLTALK_CI_BUILD_BASE }} -p ${{ env.reponame }} > overview-sum.txt
+        shell: bash
+        working-directory: SMALLAMP_CI_HOME
+      - uses: actions/upload-artifact@v2
+        with:
+          name: "smallAmp-overview-${{ env.reponame }}-run${{github.run_number}}"
+          path: ${{SMALLAMP_CI_HOME}}/overview-*.txt
       - name: Download artifacts
         uses: actions/download-artifact@v2
         with:
