--- a/.github/workflows/SmallAmpCI.yml
+++ b/.github/workflows/SmallAmpCI.yml
@@ -46,23 +46,23 @@ jobs:
         shell: bash
         timeout-minutes: 15
       - uses: mabdi/smallamp-action@main
-      - run: python3 runner.py -r amp -d ${{ env.SMALLTALK_CI_BUILD_BASE }} -p ${{ env.reponame }} > overview-amp.txt
-        shell: bash
-        working-directory: SMALLAMP_CI_HOME
-      - run: python3 runner.py -r sum -d ${{ env.SMALLTALK_CI_BUILD_BASE }} -p ${{ env.reponame }} > overview-sum.txt
-        shell: bash
-        working-directory: SMALLAMP_CI_HOME
-      - uses: actions/upload-artifact@v2
-        with:
-          name: "smallAmp-overview-${{ env.reponame }}-run${{github.run_number}}"
-          path: ${{env.SMALLAMP_CI_HOME}}/overview-*.txt
       - name: Download artifacts
         uses: actions/download-artifact@v2
         with:
           path: ${{ env.SMALLTALK_CI_BUILD_BASE }}
-      - run: cd smallAmp-results*; find . -name "*.zip" -exec unzip {} \;; mv *.st ..
+      - run: cd smallAmp-results*; find . -name "*.zip" -exec unzip {} \;; rm *.zip; mv * ..
         shell: bash 
         working-directory: ${{ env.SMALLTALK_CI_BUILD_BASE }}
+      - run: python3 runner.py -r amp -d ${{ env.SMALLTALK_CI_BUILD_BASE }} -p ${{ env.reponame }} > overview-amp.txt
+        shell: bash
+        working-directory: ${{SMALLAMP_CI_HOME}}
+      - run: python3 runner.py -r sum -d ${{ env.SMALLTALK_CI_BUILD_BASE }} -p ${{ env.reponame }} > overview-sum.txt
+        shell: bash
+        working-directory: ${{SMALLAMP_CI_HOME}}
+      - uses: actions/upload-artifact@v2
+        with:
+          name: "smallAmp-overview-${{ env.reponame }}-run${{github.run_number}}"
+          path: ${{env.SMALLAMP_CI_HOME}}/overview-*.txt
       - run: curl https://raw.githubusercontent.com/mabdi/small-amp/master/scripts/installer.st -o installer.st
         shell: bash 
         working-directory: ${{ env.SMALLTALK_CI_BUILD_BASE }}
