--- a/.github/workflows/SmallAmpCI.yml
+++ b/.github/workflows/SmallAmpCI.yml
@@ -55,10 +55,10 @@ jobs:
         working-directory: ${{ env.SMALLTALK_CI_BUILD_BASE }}
       - run: python3 runner.py -r amp -d ${{ env.SMALLTALK_CI_BUILD_BASE }} -p ${{ env.reponame }} > overview-amp.txt
         shell: bash
-        working-directory: ${{SMALLAMP_CI_HOME}}
+        working-directory: ${{env.SMALLAMP_CI_HOME}}
       - run: python3 runner.py -r sum -d ${{ env.SMALLTALK_CI_BUILD_BASE }} -p ${{ env.reponame }} > overview-sum.txt
         shell: bash
-        working-directory: ${{SMALLAMP_CI_HOME}}
+        working-directory: ${{env.SMALLAMP_CI_HOME}}
       - uses: actions/upload-artifact@v2
         with:
           name: "smallAmp-overview-${{ env.reponame }}-run${{github.run_number}}"
