--- a/.github/workflows/SmallAmpCI.yml
+++ b/.github/workflows/SmallAmpCI.yml
@@ -2,7 +2,9 @@ name: SmallAmpCI
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   reponame: ${{github.event.repository.name}}
-  base_ref: ${{ github.base_ref }}
+#  base_ref: ${{ github.base_ref }}
+  base_ref: ${{ env.GITHUB_REF }}
+
 on:
   workflow_dispatch:
 
