--- a/.github/workflows/SmallAmpCI.yml
+++ b/.github/workflows/SmallAmpCI.yml
@@ -2,8 +2,6 @@ name: SmallAmpCI
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   reponame: ${{github.event.repository.name}}
-#  base_ref: ${{ github.base_ref }}
-#  base_ref: ${{ env.GITHUB_REF }}
 
 on:
   workflow_dispatch:
@@ -89,6 +87,6 @@ jobs:
                 repo: '${{ env.reponame }}',
                 title: "[SmallAmp] amplified tests for action number ${{github.run_number}}",
                 head: "SmallAmp-${{github.run_number}}",
-                base: "${{ env.GITHUB_REF }}",
+                base: "${GITHUB_REF##*/}",
                 body: "I submit this pull request to suggest new tests based on the output of SmallAmp tool."
             });
