--- a/.github/workflows/SmallAmpCI.yml
+++ b/.github/workflows/SmallAmpCI.yml
@@ -5,7 +5,20 @@ env:
 
 on:
   workflow_dispatch:
-
+    inputs:
+      iteration:
+        description: 'Maximum number of transformations applied to an original test method.'
+        required: true
+        default: '3'
+      maxInputs:
+        description: 'maximum number of inputs selected by the reducer'
+        required: true
+        default: '10'
+      mode:
+        description: 'Mode (possible values: snapshot, dspot)'
+        required: true
+        default: 'snapshot'
+        
 jobs:
   TestAmplification:
     runs-on: ubuntu-latest
@@ -29,6 +42,10 @@ jobs:
           # you can also use: ${{ matrix.portion }}
           SMALLAMP_PORTION: ${{ strategy.job-index }} 
           SMALLAMP_ALLJOBS: ${{ strategy.job-total }}
+          SMALLAMP_iteration: ${{ github.event.inputs.iteration }}
+          SMALLAMP_maxInputs: ${{ github.event.inputs.maxInputs }}
+          SMALLAMP_mode: ${{ github.event.inputs.mode }}
+          
   TestAmplificationPush:
     runs-on: ubuntu-latest
     needs: TestAmplification
