--- a/.github/workflows/SmallAmpCI_dbg.yml
+++ b/.github/workflows/SmallAmpCI_dbg.yml
@@ -2,6 +2,9 @@ name: SmallAmpCIDbg
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   reponame: ${{github.event.repository.name}}
+  project_baseline: SmallBank
+  project_directory: src
+  
 
 on:
   workflow_dispatch:
