--- a/.github/workflows/SmallAmpCI_dbg.yml
+++ b/.github/workflows/SmallAmpCI_dbg.yml
@@ -13,6 +13,7 @@ jobs:
   TestAmplificationSetup:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - uses: mabdi/smallamp-action@reimp
         with:
           action: setup
