--- a/.github/workflows/SmallAmpCI_dbg.yml
+++ b/.github/workflows/SmallAmpCI_dbg.yml
@@ -5,12 +5,24 @@ env:
   project_baseline: SmallBank
   project_directory: src
   
-
 on:
   workflow_dispatch:
+    inputs:
+      iteration:
+        description: 'Maximum number of transformations applied to an original test method.'
+        required: true
+        default: '3'
+      maxInputs:
+        description: 'maximum number of inputs selected by the reducer'
+        required: true
+        default: '10'
+      mode:
+        description: 'Mode (possible values: dspotSnapshots, dspot, diffSnapshots, diff)'
+        required: true
+        default: 'diff'
         
 jobs:
-  TestAmplificationSetup:
+  TestAmplification:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -19,4 +31,29 @@ jobs:
       - uses: mabdi/smallamp-action@reimp
         with:
           action: setup
-      
+          smallamp-branch: action_reimp
+      - uses: mabdi/smallamp-action@reimp
+        with:
+          action: amplify
+        env:
+          SMALLAMP_PORTION: ${{ strategy.job-index }} 
+          SMALLAMP_ALLJOBS: ${{ strategy.job-total }}
+          SMALLAMP_iteration: ${{ github.event.inputs.iteration }}
+          SMALLAMP_maxInputs: ${{ github.event.inputs.maxInputs }}
+          SMALLAMP_mode: ${{ github.event.inputs.mode }}  
+  TestAmplificationPush:
+    runs-on: ubuntu-latest
+    needs: TestAmplification
+    steps:
+      - uses: actions/checkout@v2
+        with:
+           fetch-depth: 0
+      - uses: mabdi/smallamp-action@reimp
+        with:
+          action: setup
+          smallamp-branch: action_reimp
+      - uses: mabdi/smallamp-action@reimp
+        with:
+          action: amplify
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          
