--- a/.github/workflows/SmallAmpCI_dbg.yml
+++ b/.github/workflows/SmallAmpCI_dbg.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Download artifacts
         uses: actions/download-artifact@v2
         with:
-          path: ${{ env.PHARO_BASE }}
+          path: ${{ env.PHARO_HOME }}
       - uses: mabdi/smallamp-action@reimp
         with:
           action: push
