--- a/.github/workflows/SmallAmpCI.yml
+++ b/.github/workflows/SmallAmpCI.yml
@@ -1,8 +1,10 @@
-name: SmallAmpCI
+name: SmallAmpCIDbg
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   reponame: ${{github.event.repository.name}}
-
+  project_baseline: SmallBank
+  project_directory: src
+  
 on:
   workflow_dispatch:
     inputs:
@@ -24,90 +26,42 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        portion: [1,2] # the content of array is not important, just the length
+        portion: [1 , 2] # the content of array is not important, just the length
     name: Job number ${{ strategy.job-index }}
     steps:
       - uses: actions/checkout@v2
-      - uses: hpi-swa/setup-smalltalkCI@v1
-        id: smalltalkci
         with:
-          smalltalk-version: Pharo64-8.0
-      - run: smalltalkci -s ${{ steps.smalltalkci.outputs.smalltalk-version }}
-        shell: bash
-        timeout-minutes: 15
-      - uses: mabdi/smallamp-action@main
-      - run: smallAmpCI 
-        shell: bash
+           fetch-depth: 0
+      - uses: mabdi/smallamp-action@reimp
+        with:
+          action: setup
+          smallamp-branch: action_reimp
+      - uses: mabdi/smallamp-action@reimp
+        with:
+          action: amplify
         env:
-          # you can also use: ${{ matrix.portion }}
           SMALLAMP_PORTION: ${{ strategy.job-index }} 
           SMALLAMP_ALLJOBS: ${{ strategy.job-total }}
           SMALLAMP_iteration: ${{ github.event.inputs.iteration }}
           SMALLAMP_maxInputs: ${{ github.event.inputs.maxInputs }}
-          SMALLAMP_mode: ${{ github.event.inputs.mode }}
-          
+          SMALLAMP_mode: ${{ github.event.inputs.mode }}  
   TestAmplificationPush:
     runs-on: ubuntu-latest
     needs: TestAmplification
     steps:
-      - name: Extract branch name
-        shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-        id: extract_branch
       - uses: actions/checkout@v2
         with:
            fetch-depth: 0
-      - run: git checkout -b "SmallAmp-${{github.run_number}}"
-        shell: bash
-      - uses: hpi-swa/setup-smalltalkCI@v1
-        id: smalltalkci
+      - uses: mabdi/smallamp-action@reimp
         with:
-          smalltalk-version: Pharo64-8.0
-      - run: smalltalkci -s ${{ steps.smalltalkci.outputs.smalltalk-version }}
-        shell: bash
-        timeout-minutes: 15
-      - uses: mabdi/smallamp-action@main
+          action: setup
+          smallamp-branch: action_reimp
       - name: Download artifacts
         uses: actions/download-artifact@v2
         with:
-          path: ${{ env.SMALLTALK_CI_BUILD_BASE }}
-      - run: ls; cd smallAmp-results*; ls; find . -name "*.zip" -exec unzip {} \;; rm *.zip; mv * ..
-        shell: bash 
-        working-directory: ${{ env.SMALLTALK_CI_BUILD_BASE }}
-      - run: python3 runner.py -r amp -d ${{ env.SMALLTALK_CI_BUILD_BASE }} -p ${{ env.reponame }} > overview-amp.txt
-        shell: bash
-        working-directory: ${{env.SMALLAMP_CI_HOME}}
-      - run: python3 runner.py -r sum -d ${{ env.SMALLTALK_CI_BUILD_BASE }} -p ${{ env.reponame }} > overview-sum.txt
-        shell: bash
-        working-directory: ${{env.SMALLAMP_CI_HOME}}
-      - uses: actions/upload-artifact@v2
+          path: ${{ env.PHARO_HOME }}
+      - uses: mabdi/smallamp-action@reimp
         with:
-          name: "smallAmp-overview-${{ env.reponame }}-run${{github.run_number}}"
-          path: ${{env.SMALLAMP_CI_HOME}}/overview-*.txt
-      - run: curl https://raw.githubusercontent.com/mabdi/small-amp/master/scripts/installer.st -o installer.st
-        shell: bash 
-        working-directory: ${{ env.SMALLTALK_CI_BUILD_BASE }}
-      - run: ${{ env.SMALLTALK_CI_VM }} TravisCI.image st --save --quit installer.st
-        shell: bash
-        working-directory: ${{ env.SMALLTALK_CI_BUILD_BASE }}
-      - run: git status
-        shell: bash  
-      - run: git branch 
-        shell: bash
-      - run: |
-          git config user.name mabdi
-          git add '*.st'
-          git commit -m '[SmallAmp] amplified tests added'
-          git push -u origin HEAD
-      - uses: actions/github-script@v4
-        with:
+          action: push
           github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            github.pulls.create({
-                owner: "mabdi",
-                repo: '${{ env.reponame }}',
-                title: "[SmallAmp] amplified tests for action number ${{github.run_number}}",
-                head: "SmallAmp-${{github.run_number}}",
-                base: "${{ steps.extract_branch.outputs.branch }}",
-                body: "I submit this pull request to suggest new tests based on the output of SmallAmp tool."
-            });
+          
